# bam2zarr

./: .gitignore  README.md  pyproject.toml
src/bam2zarr/: __init__.py  cli.py  converter.py
src/bam2zarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_conversion.py  test_known_sites.py  test_smoke.py
